--- a/firstPage/css/style.css
+++ b/firstPage/css/style.css
@@ -4,6 +4,9 @@ body {
     width: 688.06px;
     height: 489.29px;
     font-family: Nunito Sans;
+    color: rgb(71, 77, 102);
+    margin: 0 auto;
+    letter-spacing: -0.4px;
 }
 
 button {
@@ -26,7 +29,6 @@ button:hover {
 .login {
     margin: 0;
     padding: 0;
-    color: rgb(71, 77, 102);
     font-family: Nunito Sans;
     font-size: 5.73px;
     font-weight: 700;
@@ -36,17 +38,7 @@ button:hover {
     padding: 7.47px 11.47px;
 }
 
-.cards {
-    display: flex;
-}
-
-.card {
-    width: 172.94px;
-    height: 188.79px;
-}
-
 .text { 
-    color: rgb(71, 77, 102);
     font-family: Nunito Sans;
     font-size: 7.65px;
     font-weight: 400;
@@ -69,9 +61,66 @@ h1 {
     line-height: 34.4px;
     letter-spacing: 0px;
     text-align: center;
+    margin-bottom: 7.45px;
 }
 
 .select {
+    margin: 0;
+    padding: 0;
     width: 199px;
-    height: 27px;
+    height: 27px; 
+    font-family: Nunito Sans;
+    font-size: 8.6px;
+    font-weight: 600;
+    line-height: 13.38px;
+    letter-spacing: 0px;
+    text-align: center;
+    margin-left: 244.64px;
+    margin-bottom: 37.98px;
+}
+
+.cards {
+    display: flex;
+    justify-content: center;
+    gap: 37.78px;
+    
+}
+
+.card {
+    width: 172.94px;
+    height: 188.79px;
+    box-shadow: 0px 0px 0.96px 0px rgba(0, 0, 0, 0.2),0px 0.96px 4.78px 0px rgba(0, 0, 0, 0.1);
+    background: rgb(255, 255, 255);
+}
+
+.text { 
+    width: 150px;
+    height: 33px;
+    font-size: 7.65px;
+    font-weight: 400;
+    line-height: 11.47px;
+    text-align: left;
+    padding-left: 11.47px;
+}
+
+img {
+    margin: 0;
+    padding: 0;
+    margin-bottom: 7.65px;
+    padding-left: 11.47px;
+    padding-left: 11.47px;
+}
+
+h3 {
+    margin: 0;
+    padding: 0; 
+    font-family: Nunito Sans;
+    font-size: 14.33px;
+    font-weight: 700;
+    line-height: 19.11px;
+    text-align: left;
+    width: 138px;
+    height: 20px;
+    margin-bottom: 7.65px;
+    padding-left: 11.47px;
 }
