--- a/firstPage/css/style.css
+++ b/firstPage/css/style.css
@@ -5,8 +5,10 @@ body {
     height: 489.29px;
     font-family: Nunito Sans;
     color: rgb(71, 77, 102);
-    margin: 0 auto;
     letter-spacing: -0.4px;
+    box-shadow: 0px 0px 1px 0px rgba(0, 0, 0, 0.3),0px 1px 4.78px 0px rgba(0, 0, 0, 0.3);
+    background: rgb(255, 255, 255);
+    margin: auto auto;
 }
 
 button {
@@ -94,8 +96,9 @@ h1 {
 .card {
     width: 172.94px;
     height: 188.79px;
-    box-shadow: 0px 0px 0.96px 0px rgba(0, 0, 0, 0.2),0px 0.96px 4.78px 0px rgba(0, 0, 0, 0.1);
+    box-shadow: 0px 0px 0.96px 0px rgba(0, 0, 0, 0.3),0px 0.96px 4.78px 0px rgba(0, 0, 0, 0.2);
     background: rgb(255, 255, 255);
+    margin-bottom: 89.43px;
 }
 
 .text { 
