--- a/secondPage/css/style.css
+++ b/secondPage/css/style.css
@@ -1,9 +1,156 @@
+body {
+    margin: 0;
+    padding: 0;
+    padding-top: 25px;
+    font-family: Nunito Sans;
+}
 
 a {
+    margin: 0;
+    padding: 0;
     text-decoration: none !important;
     color: rgb(71, 77, 102);
 }
 
 .full-body {
     display: flex;
+    gap: 63.77px;
+    width: 688.06px;
+    height: 489.29px;
+    margin: 0 auto;
+    padding: 24.84px 64.51px;
+    box-shadow: 0px 0px 0.96px 0px rgba(0, 0, 0, 0.3),0px 0.96px 4.78px 0px rgba(0, 0, 0, 0.2);
+}
+
+.signup { 
+    margin: 0;
+    padding: 0;
+    color: rgb(143, 149, 178);
+    font-size: 14.33px;
+    font-weight: 700;
+    line-height: 19.11px;
+    letter-spacing: -0.2px;
+    text-align: left;
+}
+
+h1 { 
+    margin: 0;
+    padding: 0;
+    width: 275px;
+    height: 69px;
+    color: rgb(46, 48, 50);
+    font-size: 28.67px;
+    font-weight: 700;
+    line-height: 34.4px;
+    letter-spacing: 0px;
+    text-align: left;
+    margin-top: 37.34px;
+    margin-bottom: 7.45px;
+}
+
+.text {
+    margin: 0;
+    padding: 0;
+    width: 186px;
+    height: 54px;
+    color: rgb(71, 77, 102);
+    font-size: 8.6px;
+    font-weight: 600;
+    line-height: 13.38px;
+    letter-spacing: 0px;
+    text-align: left;
+    margin-bottom: 14.81px;
+}
+
+.img-one img {
+    padding: 4.81px;
+}
+
+.input-form {
+    width: 220.27px; 
+    height: 439.61px;
+    box-sizing: border-box;
+    border: 0.48px solid rgb(221, 226, 230);
+    border-radius: 9.56px;
+    background: rgb(255, 255, 255);
+    padding: 17.68px;
+}
+
+h2 {
+    margin: 0;
+    padding: 0; 
+    color: rgb(43, 47, 50);
+    font-family: Inter;
+    font-size: 11.47px;
+    font-weight: 400;
+    line-height: 14px;
+    letter-spacing: 0%;
+    text-align: left;
+    margin-bottom: 11.47px;
+}
+
+.steps {
+    font-family: Inter;
+    font-size: 6.69px;
+    font-weight: 400;
+    line-height: 8px;
+    letter-spacing: 0%;
+    text-align: right;
+    color: rgb(131, 137, 140);
+    padding-right: 4.5px;
+}
+
+.two-stick {
+    position: relative;
+    top: 13.18px;
+    width: 179.18px;
+    height: 2.87px;
+    border-radius: 9.56px;
+    background: rgb(226, 230, 249);
+    padding-bottom: 9.08;
+}
+
+.one-stick {
+    position: relative;
+    top: 9px;
+    width: 44.8px;
+    height: 5.73px;
+    border-radius: 9.56px;
+    background: rgb(85, 112, 241);
+}
+
+.registration {
+    margin-top: 32.49px;
+}
+
+.main-inf {
+    margin: 0;
+    padding: 0;
+    width: 179.18px;
+    height: 24.85px;
+    box-sizing: border-box;
+    border: 0.48px solid rgb(207, 211, 213);
+    border-radius: 3.82px; 
+    color: rgb(171, 175, 177);
+    font-family: Inter;
+    font-size: 9px;
+    font-weight: 400;
+    line-height: 19px;
+    letter-spacing: 0%;
+    text-align: left; 
+    padding: 7.65px; 
+    margin-bottom: 11.47px;
+}
+
+.label-input { 
+    margin: 0;
+    padding: 0;
+    color: rgb(94, 99, 102);
+    font-family: Inter;
+    font-size: 11px;
+    font-weight: 400;
+    line-height: 15px;
+    letter-spacing: 0%;
+    text-align: left;
+    
 }
